2007-07-13  Luca Bruno  <lethalman88@gmail.com>

	== Released 0.1.2 version ==

	* syx/syx-memory.c (GC transactions): use multiple-level transactions

	* st/kernel/Float.st (truncated): added

	* st/kernel/SmallInteger.st (quo:): added and remove #/ fake

2007-07-12  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-primitives.c (Object_at_put): prevent from modifying constant literals
	(ByteArray_at_put): idem

	* syx/syx-object.h (struct SyxObject): added is_constant flag

	* st/kernel/Number.st (to:by:reverseDo:): added

	* st/kernel/ArrayedCollection.st (copyWith:): added
	

	* st/kernel/Collection.st (copyWith:): added 

	* st/kernel/SequenceableCollection.st (findFirst:): added
	(findLast:): added
	(reverse): added
	(reverseDo): added
	(with:do:): added
	(atAll:put:): added
	(atAllPut:): added
	(from:to:keysAndValuesDo:) added

2007-07-11  Luca Bruno  <lethalman88@gmail.com>

	* SConstruct: build on Mac OS

	* syx/SConscript: call ldconfig on POSIX during installation
	
	* syx/syx-object.c (SYX_SMALL_INTEGER_MUL_OVERFLOW): added
	(SYX_SMALL_INTEGER_SHIFT_OVERFLOW): added

	* syx/syx-memory.c (syx_memory_save_image): save large integers taking care of that Syx built without the Bignum support

	* syx/syx-interp.c (syx_process_execute_blocking): be safe against scheduling processes

	* syx/syx-primitives.c (LargeInteger): return a SmallInteger when we can

	* syx/syx-bytecode.c (syx_bytecode_gen_message): special unary and binary messages need to be rewritten

	* syx/syx-interp.c (syx_send_binary_message): fixed possibly memory corruption

2007-07-10  Luca Bruno  <lethalman88@gmail.com>

	* SConstruct: use syx/syx-config.h instead of config.h

	* Added support for infinite-precision numbers

	* syx/syx-object.h (SYX_CLASS_FINALIZATION): added

	* syx/syx-object.c (syx_object_free): added object finalization
	(syx_large_integer_new): added
	(syx_large_integer_new_integer): added
	(syx_large_integer_new_mpz): added
